--- a/Exhibits/style.css
+++ b/Exhibits/style.css
@@ -91,3 +91,12 @@ navbar-nav {
     background-repeat: no-repeat;
     background-size: cover;       
 }
+
+ul {
+    list-style-type: none;
+  }
+
+.row {
+    background-color: #212529;
+    color: white;
+}
