--- a/Exhibits/css/style.css
+++ b/Exhibits/css/style.css
@@ -6,7 +6,7 @@ navbar-nav {
  }
  .parallax {
     /* The image used */
-    background-image: url("parallax.png");
+    background-image: url("images/parallax.png");
 
     /* Set a specific height */
     min-height: 450px; 
@@ -66,7 +66,7 @@ navbar-nav {
 
 .parallax-2 {
     /* The image used */
-    background-image: url("Parallax-2.png");
+    background-image: url("images/Parallax-2.png");
 
     /* Set a specific height */
     min-height: 450px; 
@@ -80,7 +80,7 @@ navbar-nav {
 
 .parallax-3 {
     /* The image used */
-    background-image: url("Parallax-3.png");
+    background-image: src="images/Parallax-3.png" alt="Mountain View";
 
     /* Set a specific height */
     min-height: 450px; 
