--- a/shop/style.css
+++ b/shop/style.css
@@ -78,6 +78,10 @@ navbar-nav {
     background-size: cover;       
 }
 
+.shop{
+    font-family: 'Libre Baskerville', serif;  
+}
+
 .parallax-3 {
     /* The image used */
     background-image: url("https://pbp1995.github.io/MJT/Exhibits/images/Parallax-3.png");
