--- a/shop/style.css
+++ b/shop/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(background-shop.png);
+    background-image: url("img/background-shop.png");
 }
 
 navbar-nav {
@@ -104,7 +104,7 @@ ul {
   }
 
 .row {
-    background-color: #212529;
+    /*background-color: #212529;*/
     color: white;
     padding: 0px;
 }
@@ -124,3 +124,7 @@ ul {
 h5{
     color: black;  
 }
+
+/* a{
+    color: #212529;
+} */
